--- a/site/locales/pl.yml
+++ b/site/locales/pl.yml
@@ -2,7 +2,7 @@
 pl:
   keywords: "tatuaże, piercing, usuwanie laserowe, studio tatuażu, dziary, fakty o tatuażach"
   titles:
-    calendar: "Wolne terminów"
+    calendar: "Wolne terminy"
     faq: "Pytania i odpowiedzi"
   descriptions:
     calendar: "Kalendarz z terminami, w które można się umówić na tatuaż lub wyjazd"
