--- a/site/locales/en.yml
+++ b/site/locales/en.yml
@@ -1,18 +1,20 @@
 ---
 en:
   keywords: "tatoos, tattoo studio, piercing, laser removal, tattoo facts"
+  paths:
+    calendar: "free-terms"
+    guide: "tattoo-care"
   titles:
-    calendar: "Free terms for a visit"
+    calendar: "Free terms"
     faq: "F.A.Q."
+    guide: "Tattoo care"
+    main_page: "Main page"
   descriptions:
     calendar: "Calendar with free terms to make an appointment or organise guestspot"
     faq: "Most frequent questions and answers about making tattoos"
     main: "Main page of tattoo studio Montażownia Tatuażu"
     portfolio: "Album with all tattoos made in Montażownia tatuażu"
-  nav:
-    calendar: "Calendar"
-    main_page: "Main page"
-  calendar:
-    title: "Calendar"
-  paths:
-    calendar: "free-terms"
+    guide: "Short guide about how to take care about yourself after making a tattoo"
+  sites:
+    calendar:
+      title: "Calendar"
