Adding some translations

--- a/site/locales/en.yml
+++ b/site/locales/en.yml
@@ -20,3 +20,14 @@ en:
   sites:
     calendar:
       title: "Calendar"
+  calendar:
+    header: Make a booking!
+    legend:
+      free: Free days
+      part: Days free in shown hours
+      busy: These days are not free anymore
+    contact_with_us: Pick something and let us know that you want a tattoo ;)
+  faq:
+    header: F.A.Q. - everything you need to know
+  portfolio:
+    header: Our tattoos
