--- a/site/locales/pl.yml
+++ b/site/locales/pl.yml
@@ -24,9 +24,9 @@ pl:
   calendar:
     header: Zapisz się!
     legend:
-      free: Wolne dni
+      fullday: Wolne dni
       part: Dni wolne w podanych godzinach
-      busy: Te dni już nie są wolne
+      not: Te dni już nie są wolne
     contact_with_us: Wybierz jakąś formę kontaktu i daj znać, że chcesz dziarę.
   faq:
     header: Pytania i odpowiedzi - rozwiewamy wątpliwości
