--- a/site/locales/en.yml
+++ b/site/locales/en.yml
@@ -4,18 +4,16 @@ en:
     close: "Close"
   paths:
     calendar: "free-terms"
-    guide: "tattoo-care"
   titles:
     calendar: "Free terms"
     faq: "F.A.Q."
-    guide: "Tattoo care"
     main: "Main page"
+    guide: "Tattoo care"
   descriptions:
     calendar: "Calendar with free terms to make an appointment for tattoo or organise guestspot."
-    faq: "Most frequent questions and answers about making tattoos."
+    faq: "Most frequent questions and answers about making tattoos and taking care about them."
     main: "Main page of tattoo studio Montażownia Tatuażu located in Poznań, Poland"
     portfolio: "Album with most represntative tattoos made in Montażownia tatuażu"
-    guide: "Short guide about how to take care about your fresh tattoo and yourself after doing it."
     blog: "Blog about tattoos, their history and culture. Sometimes with posts about tattoo adventures of Montażownia."
   sites:
     calendar:
