--- a/site/locales/en.yml
+++ b/site/locales/en.yml
@@ -4,11 +4,13 @@ en:
     close: "Close"
   paths:
     calendar: "free-terms"
+    terms: "terms-and-rules"
   titles:
     calendar: "Free terms"
     faq: "F.A.Q."
     main: "Main page"
     guide: "Tattoo care"
+    terms: "Terms and rules"
   descriptions:
     calendar: "Calendar with free terms to make an appointment for tattoo or organise guestspot."
     faq: "Most frequent questions and answers about making tattoos and taking care about them."
@@ -19,13 +21,14 @@ en:
     calendar:
       title: "Calendar"
   calendar:
-    header: Make a booking!
+    header: "Make a booking!"
     legend:
-      fullday: Free days
-      part: Days free in shown hours
-      not: These days are not free anymore
-    contact_with_us: Pick something and let us know that you want a tattoo ;)
+      fullday: "Free days"
+      part: "Days free in shown hours"
+      not: "These days are not free anymore"
+    contact_with_us: "Pick something and let us know that you want a tattoo ;)"
   faq:
-    header: F.A.Q. - everything you need to know
+    header: "F.A.Q. - everything you need to know"
   portfolio:
-    header: Our tattoos
+    header: "Our tattoos"
+    introduction: "Something about tattooing"
